# market-kernel

./: .aider.conf.yml  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  generate-sbe-files.ps1  generate-sbe-files.sh  instructions-language-cpp.md  instructions.md  lowlatency.md  mkdocs.yml  project-instructions.md  pyproject.toml  requirements.txt
.continue/: config.yaml
.github/workflows/: docs.yml  tests.yml
docs/: index.md
docs/marketkernel/marketkernel/: annotated.md  class_member_functions.md  class_member_variables.md  class_members.md  classes.md  classmarketkernel_1_1MarketData.md  classmarketkernel_1_1_market_data.md  dir_d44c64559bbebec7f509842c48db8b23.md  files.md  hierarchy.md  mk__market__data_8hpp.md  mk__market__data_8hpp_source.md  mk__market__data__mode_8h.md  mk__market__data__mode_8h_source.md  mk__math_8hpp.md  mk__math_8hpp_source.md  mk__side_8h.md  mk__side_8h_source.md  namespace_member_enums.md  namespace_member_functions.md  namespace_members.md  namespacemarketkernel.md  namespaces.md
include/: mk_ips.hpp  mk_market_data.hpp  mk_market_data_mode.h  mk_market_data_view.hpp  mk_math.hpp  mk_ring_buffer.hpp  mk_side.h  mk_tick.hpp  mk_utils.h
include/schemas/: README.md
include/schemas/b3/: AggressorSide.h  ApplVerID.h  AuctionImbalance_19.h  Boolean.h  ChannelReset_11.h  ClosingPrice_17.h  DeleteOrder_MBO_51.h  EmptyBook_9.h  ExecutionStatistics_56.h  ExecutionSummary_55.h  ExerciseStyle.h  Fixed8.h  ForwardTrade_54.h  FramingHeader.h  GovernanceIndicator.h  GroupSizeEncoding.h  HeaderMessage_0.h  HighPrice_24.h  ImbalanceCondition.h  ImpliedMarketIndicator.h  InstrAttribType.h  InstrAttribValue.h  LastTradePrice_27.h  LotType.h  LowPrice_25.h  MDEntryType.h  MDUpdateAction.h  MassDeleteOrders_MBO_52.h  MatchEventIndicator.h  MaturityMonthYear.h  MessageHeader.h  MessageType.h  MultiLegModel.h  MultiLegPriceMethod.h  NewsSource.h  News_5.h  OpenCloseSettlFlag.h  OpenInterest_29.h  OpeningPrice_15.h  OptPayoutType.h  (+43 more)
schemas/b3/: README.md  b3-market-data-messages-2.3.1.xml
tests/: CMakeLists.txt  test_mk_market_data.cpp  test_mk_market_data_view.cpp  test_mk_math.cpp  test_mk_ring_buffer.cpp  test_utils.hpp
